--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
 <body>
 
+  <a href="/login-student.php">STUDENT LOGIN</a><br>
+  <a href="/login-parent.php">PARENT LOGIN</a><br>
+  
 
 <h1>Index Page 90 Degree</h1>
 
