--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 <body>
 
-  <a href="/login-student.php">STUDENT LOGIN</a><br>
-  <a href="/login-parent.php">PARENT LOGIN</a><br>
+  <a href="login-student.php">STUDENT LOGIN</a><br>
+  <a href="login-parent.php">PARENT LOGIN</a><br>
   
 
 <h1>Index Page 90 Degree</h1>
